Updated Index Html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <title>Sentiment Based Product Recommendation</title>
+    <title>By Srinivas NV</title>
   </head>
 
   <body>
