--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,6 @@
       crossorigin="anonymous"
     />
     <title>Sentiment Based Product Recommendation</title>
-    <title>By Srinivas NV</title>
   </head>
 
   <body>
@@ -21,6 +20,7 @@
         <a class="navbar-brand" href="#"
           >Sentiment Product Recommendation System</a
         >
+        <label class="navbar-brand">By Srinivas NV</label>
         <button
           class="navbar-toggler"
           type="button"
